# aula17_bootcamp

./: exemplo1.py  meubanco.db  pyproject.toml
